# Wicked-Strat

./: .gitignore  01-VERIFICATION.md  02-PLAN.md  03-VERIFICATION.md  GEMINI.md  config.yaml  create_stubs.py  main.py  pyproject.toml  requirements.txt
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/: audit.py  backtest.py  backtest_diagnostics.py  confidence_win_loss.py  config.py  core.py  data_loader.py  entry.py  entry_confidence.py  full_backtest.py  ismt.py  lvn.py  metrics.py  metrics_dashboard.py  ml_pipeline.py  plotting.py  position.py  reporting.py  session.py  simulator.py  single_prints.py  smt.py  summary_report.py  swings.py  tpo.py  utils.py  volume_profile.py
src/core/: analysis.py  filtering.py  profile.py  strategy.py  structure.py
src/data/: ingestion.py
tests/phase04/: __init__.py  conftest.py  test_entry_aggressive_ledge.py  test_entry_checklist.py  test_entry_confidence.py  test_entry_three_step.py  test_ismt.py  test_smt.py  test_structural_confirmation.py
tests/phase05/: __init__.py  conftest.py  test_end_of_df_flat.py  test_eod_force_flat.py  test_full_exit_ordering.py  test_hard_stop_lvn.py  test_pending_fill_globex_order.py  test_plotting_smoke.py  test_pnl_commission.py  test_position_machine_core.py  test_position_sizing.py  test_reporting_csv_html.py  test_run_paths.py  test_summary_stub.py  test_tp2_and_sl_contract.py
tests/phase06/: __init__.py  conftest.py  test_confidence_win_loss.py  (+4 more)
(+79 files in other folders)
